Completely reworked weight-based balanced system, replaced weight with vector value, improved item generation and random item search and applying effects, added monster and effect factory, small fixes and adjustments